Corrected box image and paragraph sizes and alignment.

--- a/html-scss-js/scss/base/_global.scss
+++ b/html-scss-js/scss/base/_global.scss
@@ -12,6 +12,7 @@ body {
     width: $small-container;
     padding: $basis-padding 23px;
     margin: 0 auto;
+    margin-top: 2 * $basis-margin;
 }
 
 .heading {
