--- a/html-scss-js/scss/components/_containers.scss
+++ b/html-scss-js/scss/components/_containers.scss
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    p {
+        max-width: 3 * ($image-width-multiplicator * $extra-small);
+    }
 }
 
 .elements {
@@ -16,10 +20,33 @@
     padding: $basis-padding $basis-padding;
     margin: $basis-margin 0;
     box-shadow: 0 5px 20px #f0f0f0;
+    max-width: ($image-width-multiplicator + 0.1) * $extra-small;
+
+    p {
+        max-width: $image-width-multiplicator * $extra-small;
+    }
 }
 
 @media all and (min-width: $medium) {
     .elements {
         flex-direction: row;
     }
+}
+
+@media all and (max-width: $medium) {
+
+    .standard-container p {
+        max-width: $extra-small - 80px;
+        height: auto;
+    }
+
+    .standard-element {
+        max-width: $extra-small - 70px;
+        height: auto;
+
+        p {
+            max-width: $extra-small - 80px;
+        }
+    }
+
 }
