--- a/html-scss-js/scss/utils/_variables.scss
+++ b/html-scss-js/scss/utils/_variables.scss
@@ -29,3 +29,4 @@ $extra-large: 1200px;
 $basis-margin: 12px;
 $basis-padding: 12px;
 $basic-button-height: $primary-font-size + 2 * $basis-padding;
+$image-width-multiplicator: 0.5;
